syntax = "proto3";
package xion.feeabs.v1beta1;

import "gogoproto/gogo.proto";
import "xion/feeabs/v1beta1/params.proto";
import "xion/feeabs/v1beta1/epoch.proto";

option go_package = "github.com/burnt-labs/xion/x/feeabs/types";

// GenesisState defines the feeabs module's genesis state.
message GenesisState {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
  repeated EpochInfo epochs = 2 [ (gogoproto.nullable) = false ];
  string port_id = 3;
}
